RESOLVED FIXED255563
REGRESSION (262850@main): [ iOS, macOS Debug ] TestWebKitAPI.IPCTestingAPI.CanInterceptHasStorageAccess is a constant failure.
https://bugs.webkit.org/show_bug.cgi?id=255563
Summary REGRESSION (262850@main): [ iOS, macOS Debug ] TestWebKitAPI.IPCTestingAPI.Ca...
Bri Harris
Reported 2023-04-17 17:19:52 PDT
TestWebKitAPI.IPCTestingAPI.CanInterceptHasStorageAccess is a constant failure on iOS 16 and macOS Debug. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.IPCTestingAPI.CanInterceptHasStorageAccess TEXT: ERROR: Error while launching com.apple.WebKit.Networking: Connection invalid /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WebKit/UIProcess/Launcher/cocoa/ProcessLauncherCocoa.mm(225) : auto WebKit::ProcessLauncher::launchProcess()::(anonymous class)::operator()(xpc_object_t) const LEAK: 1 WebProcessPool LEAK: 1 WebPageProxy /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:444 Expected equality of these values: [webView stringByEvaluatingJavaScript:@"targetMessage.arguments[3].type"].UTF8String Which is: "(null)" "uint64_t" /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:445 Expected equality of these values: [webView stringByEvaluatingJavaScript:@"targetMessage.arguments[3].value"].intValue Which is: 0 [webView stringByEvaluatingJavaScript:@"IPC.pageID.toString()"].intValue Which is: 8
Attachments
Bri Harris
Comment 1 2023-04-17 17:20:24 PDT
I was able to replicate this failure on Ventura ToT as follows: run-api-tests --root TestWebKitAPI.IPCTestingAPI.CanInterceptHasStorageAccess
Radar WebKit Bug Importer
Comment 2 2023-04-17 17:20:45 PDT
Bri Harris
Comment 3 2023-04-17 17:28:04 PDT
This test appears has started failing around commit 262850@main but was passing on 262845@main.
Ryan Haddad
Comment 4 2023-04-18 10:30:13 PDT
Looking at the commits in this range, it looks like https://commits.webkit.org/262847@main could be responsible
Bri Harris
Comment 5 2023-05-02 14:28:00 PDT
EWS
Comment 6 2023-05-02 14:39:34 PDT
Test gardening commit 263608@main (f31f36c6b865): <https://commits.webkit.org/263608@main> Reviewed commits have been landed. Closing PR #13375 and removing active labels.
Chris Dumez
Comment 7 2023-06-12 12:26:04 PDT
EWS
Comment 8 2023-06-12 13:48:15 PDT
Committed 265087@main (cbd5d8089b51): <https://commits.webkit.org/265087@main> Reviewed commits have been landed. Closing PR #14880 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.